fixing site on mobile

--- a/projects/maidukagaka/style.css
+++ b/projects/maidukagaka/style.css
@@ -134,13 +134,15 @@ img {
 .maidHolder {
 	display: flex;
 	align-items: center;
+	flex-wrap: wrap;
 	border: solid 5px;
 	border-color: rgba(180,180,180,1);
 	background-color: rgba(210,210,210,.8);
 }
 
 .maidHolder img{
-	flex: 0 1 50%;
+	flex: 0 1 25%;
+	max-width: 20vw;
 }
 
 .footStickers {
